--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 pandas==2.1.3
 numpy==1.26.2
-torch==2.3.0
+torch==2.5.1+cu124 -f https://download.pytorch.org/whl/torch_stable.html
 mplfinance==0.12.10b0
 hydra_core
 gym
